--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ asgiref==3.6.0
 Django==4.1.7
 django-debug-toolbar==3.7.0
 django-seed==0.3.1
-Faker==18.4.0
+fake-factory==9999.9.9
+Faker==18.6.1
+psycopg2==2.9.6
 python-dateutil==2.8.2
 six==1.16.0
 sqlparse==0.4.3
